pkg/plugins/policies/meshpassthrough/plugin/v1alpha1/testdata/basic.listener.matcher-api.golden.yaml
resources:
- name: outbound:passthrough:ipv4
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 0.0.0.0
        portValue: 15001
    filterChainMatcher:
      matcherTree:
        exactMatchMap:
          map:
            raw_buffer:
              matcher:
                matcherList:
                  matchers:
                  - onMatch:
                      matcher:
                        matcherTree:
                          exactMatchMap:
                            map:
                              "80":
                                action:
                                  name: meshpassthrough_http_10.42.0.8_80
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_http_10.42.0.8_80
                              "443":
                                action:
                                  name: meshpassthrough_http_10.42.0.8_443
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_http_10.42.0.8_443
                              "8080":
                                action:
                                  name: meshpassthrough_http_10.42.0.8_8080
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_http_10.42.0.8_8080
                              "8126":
                                action:
                                  name: meshpassthrough_http_10.42.0.8_8126
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_http_10.42.0.8_8126
                              "9091":
                                action:
                                  name: meshpassthrough_http_10.42.0.8_9091
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_http_10.42.0.8_9091
                          input:
                            name: envoy.matching.inputs.destination_port
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                        onNoMatch:
                          action:
                            name: meshpassthrough_http_10.42.0.8_*
                            typedConfig:
                              '@type': type.googleapis.com/google.protobuf.StringValue
                              value: meshpassthrough_http_10.42.0.8_*
                    predicate:
                      singlePredicate:
                        customMatch:
                          name: envoy.matching.matchers.ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                            cidrRanges:
                            - addressPrefix: 10.42.0.8
                              prefixLen: 32
                            statPrefix: 10.42.0.8
                        input:
                          name: envoy.matching.inputs.destination_ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
                  - onMatch:
                      matcher:
                        matcherTree:
                          exactMatchMap:
                            map:
                              "8126":
                                action:
                                  name: meshpassthrough_http_192.168.0.0/16_8126
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_http_192.168.0.0/16_8126
                          input:
                            name: envoy.matching.inputs.destination_port
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                    predicate:
                      singlePredicate:
                        customMatch:
                          name: envoy.matching.matchers.ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                            cidrRanges:
                            - addressPrefix: 192.168.0.0
                              prefixLen: 16
                            statPrefix: 192.168.0.0/16
                        input:
                          name: envoy.matching.inputs.destination_ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
                  - onMatch:
                      matcher:
                        matcherTree:
                          exactMatchMap:
                            map:
                              "8126":
                                action:
                                  name: meshpassthrough_http_240.0.0.0/4_8126
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_http_240.0.0.0/4_8126
                          input:
                            name: envoy.matching.inputs.destination_port
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                    predicate:
                      singlePredicate:
                        customMatch:
                          name: envoy.matching.matchers.ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                            cidrRanges:
                            - addressPrefix: 240.0.0.0
                              prefixLen: 4
                            statPrefix: 240.0.0.0/4
                        input:
                          name: envoy.matching.inputs.destination_ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
                onNoMatch:
                  matcher:
                    matcherTree:
                      exactMatchMap:
                        map:
                          "80":
                            action:
                              name: meshpassthrough_http_80
                              typedConfig:
                                '@type': type.googleapis.com/google.protobuf.StringValue
                                value: meshpassthrough_http_80
                          "8080":
                            action:
                              name: meshpassthrough_http_8080
                              typedConfig:
                                '@type': type.googleapis.com/google.protobuf.StringValue
                                value: meshpassthrough_http_8080
                      input:
                        name: envoy.matching.inputs.destination_port
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
            tls:
              matcher:
                matcherTree:
                  customMatch:
                    name: envoy.matching.custom_matchers.domain_matcher
                    typedConfig:
                      '@type': type.googleapis.com/xds.type.matcher.v3.ServerNameMatcher
                      domainMatchers:
                      - domains:
                        - '*.example.com'
                        onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "443":
                                    action:
                                      name: meshpassthrough_tls_*.example.com_443
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_*.example.com_443
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                      - domains:
                        - api.example.com
                        onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "443":
                                    action:
                                      name: meshpassthrough_tls_api.example.com_443
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_api.example.com_443
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                      - domains:
                        - example.com
                        onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "443":
                                    action:
                                      name: meshpassthrough_tls_example.com_443
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_example.com_443
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                  input:
                    name: envoy.matching.inputs.server_name
                    typedConfig:
                      '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
        input:
          name: envoy.matching.inputs.transport_protocol
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_api.example.com_443
          statPrefix: meshpassthrough_tls_api_example_com_443
      name: meshpassthrough_tls_api.example.com_443
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_example.com_443
          statPrefix: meshpassthrough_tls_example_com_443
      name: meshpassthrough_tls_example.com_443
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_*.example.com_443
          statPrefix: meshpassthrough_tls___example_com_443
      name: meshpassthrough_tls_*.example.com_443
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_9091
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_9091
          statPrefix: meshpassthrough_http_10_42_0_8_9091
      name: meshpassthrough_http_10.42.0.8_9091
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_8126
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_8126
          statPrefix: meshpassthrough_http_10_42_0_8_8126
      name: meshpassthrough_http_10.42.0.8_8126
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_8080
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_8080
          statPrefix: meshpassthrough_http_10_42_0_8_8080
      name: meshpassthrough_http_10.42.0.8_8080
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_443
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_443
          statPrefix: meshpassthrough_http_10_42_0_8_443
      name: meshpassthrough_http_10.42.0.8_443
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_80
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_80
          statPrefix: meshpassthrough_http_10_42_0_8_80
      name: meshpassthrough_http_10.42.0.8_80
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_10.42.0.8_*
            virtualHosts:
            - domains:
              - '*'
              name: 10.42.0.8
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_10.42.0.8_*
          statPrefix: meshpassthrough_http_10_42_0_8__
      name: meshpassthrough_http_10.42.0.8_*
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_192.168.0.0/16_8126
            virtualHosts:
            - domains:
              - '*'
              name: 192.168.0.0/16
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_192.168.0.0/16_8126
          statPrefix: meshpassthrough_http_192_168_0_0_16_8126
      name: meshpassthrough_http_192.168.0.0/16_8126
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_240.0.0.0/4_8126
            virtualHosts:
            - domains:
              - '*'
              name: 240.0.0.0/4
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_240.0.0.0/4_8126
          statPrefix: meshpassthrough_http_240_0_0_0_4_8126
      name: meshpassthrough_http_240.0.0.0/4_8126
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_8080
            virtualHosts:
            - domains:
              - example.com
              - example.com:8080
              name: example.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_example.com_8080
            - domains:
              - other.com
              - other.com:8080
              name: other.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_other.com_8080
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_8080
      name: meshpassthrough_http_8080
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_80
            virtualHosts:
            - domains:
              - www.google.com
              - www.google.com:80
              name: www.google.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_www.google.com_80
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_80
      name: meshpassthrough_http_80
    listenerFilters:
    - name: envoy.filters.listener.original_dst
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    name: outbound:passthrough:ipv4
    trafficDirection: OUTBOUND
- name: outbound:passthrough:ipv6
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: '::'
        portValue: 15001
    filterChainMatcher:
      matcherTree:
        exactMatchMap:
          map:
            raw_buffer:
              matcher:
                matcherList:
                  matchers:
                  - onMatch:
                      matcher:
                        matcherTree:
                          exactMatchMap:
                            map:
                              "9091":
                                action:
                                  name: meshpassthrough_tcp_9942:9abf:d0e0:f2da:2290:333b:e590:f497_9091
                                  typedConfig:
                                    '@type': type.googleapis.com/google.protobuf.StringValue
                                    value: meshpassthrough_tcp_9942:9abf:d0e0:f2da:2290:333b:e590:f497_9091
                          input:
                            name: envoy.matching.inputs.destination_port
                            typedConfig:
                              '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                    predicate:
                      singlePredicate:
                        customMatch:
                          name: envoy.matching.matchers.ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                            cidrRanges:
                            - addressPrefix: 9942:9abf:d0e0:f2da:2290:333b:e590:f497
                              prefixLen: 128
                            statPrefix: 9942:9abf:d0e0:f2da:2290:333b:e590:f497
                        input:
                          name: envoy.matching.inputs.destination_ip
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
                onNoMatch:
                  matcher:
                    matcherTree:
                      exactMatchMap:
                        map:
                          "80":
                            action:
                              name: meshpassthrough_http_80
                              typedConfig:
                                '@type': type.googleapis.com/google.protobuf.StringValue
                                value: meshpassthrough_http_80
                          "8080":
                            action:
                              name: meshpassthrough_http_8080
                              typedConfig:
                                '@type': type.googleapis.com/google.protobuf.StringValue
                                value: meshpassthrough_http_8080
                      input:
                        name: envoy.matching.inputs.destination_port
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
            tls:
              matcher:
                matcherTree:
                  customMatch:
                    name: envoy.matching.custom_matchers.domain_matcher
                    typedConfig:
                      '@type': type.googleapis.com/xds.type.matcher.v3.ServerNameMatcher
                      domainMatchers:
                      - domains:
                        - '*.example.com'
                        onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "443":
                                    action:
                                      name: meshpassthrough_tls_*.example.com_443
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_*.example.com_443
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                      - domains:
                        - api.example.com
                        onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "443":
                                    action:
                                      name: meshpassthrough_tls_api.example.com_443
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_api.example.com_443
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                      - domains:
                        - example.com
                        onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "443":
                                    action:
                                      name: meshpassthrough_tls_example.com_443
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_example.com_443
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                  input:
                    name: envoy.matching.inputs.server_name
                    typedConfig:
                      '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.ServerNameInput
                onNoMatch:
                  matcher:
                    matcherList:
                      matchers:
                      - onMatch:
                          matcher:
                            matcherTree:
                              exactMatchMap:
                                map:
                                  "80":
                                    action:
                                      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_80
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_80
                                  "443":
                                    action:
                                      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_443
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_443
                                  "8080":
                                    action:
                                      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8080
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8080
                                  "8126":
                                    action:
                                      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8126
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8126
                                  "9091":
                                    action:
                                      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_9091
                                      typedConfig:
                                        '@type': type.googleapis.com/google.protobuf.StringValue
                                        value: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_9091
                              input:
                                name: envoy.matching.inputs.destination_port
                                typedConfig:
                                  '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationPortInput
                            onNoMatch:
                              action:
                                name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_*
                                typedConfig:
                                  '@type': type.googleapis.com/google.protobuf.StringValue
                                  value: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_*
                        predicate:
                          singlePredicate:
                            customMatch:
                              name: envoy.matching.matchers.ip
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.ip.v3.Ip
                                cidrRanges:
                                - addressPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
                                  prefixLen: 128
                                statPrefix: b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6
                            input:
                              name: envoy.matching.inputs.destination_ip
                              typedConfig:
                                '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DestinationIPInput
        input:
          name: envoy.matching.inputs.transport_protocol
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.TransportProtocolInput
    filterChains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_9091
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_9091
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_9091
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8126
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_8126
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8126
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8080
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_8080
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_8080
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_443
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_443
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_443
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_80
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6_80
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_80
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_*
          statPrefix: meshpassthrough_tls_b6e5_a45e_70ae_e77f_d24e_5023_375d_20a6__
      name: meshpassthrough_tls_b6e5:a45e:70ae:e77f:d24e:5023:375d:20a6_*
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_api.example.com_443
          statPrefix: meshpassthrough_tls_api_example_com_443
      name: meshpassthrough_tls_api.example.com_443
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_example.com_443
          statPrefix: meshpassthrough_tls_example_com_443
      name: meshpassthrough_tls_example.com_443
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tls_*.example.com_443
          statPrefix: meshpassthrough_tls___example_com_443
      name: meshpassthrough_tls_*.example.com_443
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: meshpassthrough_tcp_9942:9abf:d0e0:f2da:2290:333b:e590:f497_9091
          statPrefix: meshpassthrough_tcp_9942_9abf_d0e0_f2da_2290_333b_e590_f497_9091
      name: meshpassthrough_tcp_9942:9abf:d0e0:f2da:2290:333b:e590:f497_9091
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_8080
            virtualHosts:
            - domains:
              - example.com
              - example.com:8080
              name: example.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_example.com_8080
            - domains:
              - other.com
              - other.com:8080
              name: other.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_other.com_8080
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_8080
      name: meshpassthrough_http_8080
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: meshpassthrough_http_80
            virtualHosts:
            - domains:
              - www.google.com
              - www.google.com:80
              name: www.google.com
              routes:
              - match:
                  prefix: /
                route:
                  cluster: meshpassthrough_http_www.google.com_80
            - domains:
              - '*'
              name: no_match
              routes:
              - directResponse:
                  body:
                    inlineString: |
                      This response comes from Kuma Sidecar. No routes matched this domain - check configuration of your MeshPassthrough policy.
                  status: 503
                match:
                  prefix: /
          statPrefix: meshpassthrough_http_80
      name: meshpassthrough_http_80
    listenerFilters:
    - name: envoy.filters.listener.original_dst
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    - name: envoy.filters.listener.http_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    name: outbound:passthrough:ipv6
    trafficDirection: OUTBOUND
